[gd_scene load_steps=3 format=2]

[ext_resource path="res://Nodes/World/Objects/MovingPlatform/MovingPlatform.gd" type="Script" id=1]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[node name="MovingPlatform" type="Spatial"]
script = ExtResource( 1 )
travel_curve = SubResource( 1 )

[node name="Body" type="KinematicBody" parent="."]
collision_layer = 3
collision_mask = 0
motion/sync_to_physics = true

[node name="LocationContainer" type="Spatial" parent="."]

[node name="Spatial" type="Spatial" parent="LocationContainer"]

[node name="Spatial2" type="Spatial" parent="LocationContainer"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
